--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reactjs-boilerplate",
-  "version": "1.1.0",
+  "name": "hori-frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 32000",
