--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "build:e2e": "cp -n example.env.local .env.local && next build",
     "start": "next start -p 32000",
+    "start:dev": "dotenv -e .env.dev next start -p 32000",
     "lint": "next lint",
     "prepare": "is-ci || husky",
     "release": "release-it"
