--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev -p 32000",
     "build": "next build",
+    "build:dev": "env-cmd -f .env.dev next build",
     "build:e2e": "cp -n example.env.local .env.local && next build",
     "start": "next start -p 32000",
-    "start:dev": "dotenv -e .env.dev next start -p 32000",
     "lint": "next lint",
     "prepare": "is-ci || husky",
     "release": "release-it"
@@ -30,6 +30,7 @@
     "accept-language": "^3.0.18",
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "i18next": "23.11.5",
