--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=hori-backend-service/api
+NEXT_PUBLIC_API_URL=http://api.zzingobomi.com/api
 
 NEXT_PUBLIC_IS_GOOGLE_AUTH_ENABLED=true
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=778828327699-3hu034kj1u76k4o5qla8221ovtbgl2g0.apps.googleusercontent.com
