--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 32000",
+    "dev": "env-cmd -f .env.local next dev -p 32000",
     "build": "next build",
     "build:dev": "env-cmd -f .env.dev next build",
     "build:e2e": "cp -n example.env.local .env.local && next build",
