feat: add cesium package

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "accept-language": "^3.0.18",
+    "cesium": "^1.118.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
